Things are working. Lot more to do: -generate some stupid bot action for debugging -construct data aggregation given debug bot -use data aggregation to present next stage

--- a/public/identifyRace.htm
+++ b/public/identifyRace.htm
@@ -30,9 +30,11 @@
 
                     <div class='frame-A-0-0' id='frame-0-0'>
 
-                        <p>
-                            <span id=myName>IF YOU ARE SEEING THIS SOMETHING IS WRONG</span>
-                        </p>
+                        <div class='innerWrap'>
+                            <p class='nameText'>
+                                <span id=myName>IF YOU ARE SEEING THIS SOMETHING IS WRONG</span>
+                            </p>
+                        </div>
 
                     </div>
 
@@ -42,7 +44,7 @@
 
             <div class='frame-buttons-B'>
                 <button type="button" class='myButton' id='whiteButton'>White</button>
-                <button type="button" class='myButton' id='blackButton'>African American</button>
+                <button type="button" class='myButton' id='blackButton'>Black</button>
             </div>
 
 
