Solo fork For now uses turkish names and asks for male or female Altough everything is done for a single player, the stage movement is still for multiple player. Need to solve that.

--- a/public/calculateScore.htm
+++ b/public/calculateScore.htm
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="css/frame.css">
-    <link rel="stylesheet" href="css/irFrame.css">
+    <link rel="stylesheet" href="css/csFrame.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
 
@@ -32,7 +32,7 @@
 
                         <div class='innerWrap'>
                             <p class='nameText'>
-                                <span id=myName>IF YOU ARE SEEING THIS SOMETHING IS WRONG</span>
+                                <span id=myScore>?</span>
                             </p>
                         </div>
 
@@ -43,8 +43,8 @@
             </div>
 
             <div class='frame-buttons-B'>
-                <button type="button" class='myButton' id='whiteButton'>Male</button>
-                <button type="button" class='myButton' id='blackButton'>Female</button>
+                <button type="button" class='myButton1' id='showScoreButton'>Show Score</button>
+                <button type="button" class='myButton2' id='doneButton'>Done</button>
             </div>
 
 
@@ -56,7 +56,7 @@
     <div id=end></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="js/identifyRace.js"></script>
+    <script src="js/calculateScore.js"></script>
 
 </body>
 </html>
