--- a/public/calculateScore.htm
+++ b/public/calculateScore.htm
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+    <buttton type='button' class='myButton0' id='disconnectButton'>Disconnect</buttton>
+
     <div id=start></div>
 
     <div class = 'wrap  noselect' style='justify-content:flex-start;margin-top:30px;'>
